hphp/test/slow/incdecwarn/IncDecProp.php.expectf
Test begin
--- C ---
int(1)
int(-1)
int(0)
int(0)

Warning: Unsupported operand type (null) for IncDec in %s/slow/incdecwarn/IncDecProp.php on line 29
Error: Implicit null to int conversion for pre/post inc/dec

Warning: Unsupported operand type (null) for IncDec in %s/slow/incdecwarn/IncDecProp.php on line 30
NULL

Warning: Unsupported operand type (null) for IncDec in %s/slow/incdecwarn/IncDecProp.php on line 31
Error: Implicit null to int conversion for pre/post inc/dec

Warning: Unsupported operand type (null) for IncDec in %s/slow/incdecwarn/IncDecProp.php on line 32
NULL
object(C) (8) {
  ["preInc"]=>
  int(1)
  ["preDec"]=>
  int(-1)
  ["postInc"]=>
  int(1)
  ["postDec"]=>
  int(-1)
  ["p"]=>
  NULL
  ["q"]=>
  NULL
  ["r"]=>
  NULL
  ["s"]=>
  NULL
}
Test end